# picoc

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  heap.c  interpreter.h  picoc.c  picoc_interpreter.h  platform.h  test.txt  todo.md
cstdlib/: errno.c  picoc_stdio.c  picoc_time.c  stdio.c  stdlib.c  unistd.c
examples/: hello.c
platform/: platform_msvc.h  platform_unix.h
src/: CMakeLists.txt
src/picoc/: CMakeLists.txt  Config.hpp.in
src/picoc/include/picoc/: picoc_interpreter.h  picoc_picoc.h  picoc_platform.h  picoc_types.h
src/picoc/include/picoc/platform/: platform_msvc.h  platform_unix.h
src/picoc/src/: library_msvc.c  picoc_clibrary.c  picoc_debug.c  picoc_expression.c  picoc_heap.c  picoc_include.c  picoc_lex.c  picoc_parse.c  picoc_picoc.c  picoc_platform.c  picoc_table.c  picoc_type.c  picoc_variable.c  platform_unix.c
src/picoc/src/cstdlib/: picoc_ctype.c  picoc_errno.c  picoc_math.c  picoc_stdbool.c  picoc_stdio.c  picoc_stdlib.c  picoc_string.c  picoc_time.c  picoc_unistd.c
src/picoc/src/platform/: library_msvc.c  library_unix.c  platform_msvc.c  platform_unix.c
src/picocli/: CMakeLists.txt
src/picocli/src/: main.c
test/: CMakeLists.txt
test/src/: generator.cpp  main.cpp  runner.cpp
test/test_data/: 18_include.c  25_quicksort.c  27_sizeof.c  28_strings.c  30_hanoi.c  45_empty_for.c  47_switch_return.c  49_bracket_evaluation.c  50_logical_second_arg.c  51_static.c  54_goto.c  55_array_initializer.c  56_cross_structure.c  57_macro_bug.c  59_break_before_loop.c  62_float.c  63_typedef.c  64_double_prefix_op.c  66_printf_undefined.c  67_macro_crash.c  68_return.c  skip_31_args.c
